background setting of three flower

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <div class="beautiful-flower-container">
             <div class="beautiful-flwer-container">
-                <h1>Let's make <br> beautiful flowers a <br> part of your life.</h1>
+                <h1 class="heading-one">Let's make <br> beautiful flowers a <br> part of your life.</h1>
                 <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout. The point of using Lorem Ipsum is <br> that it has a more-or-less normal distribution of letters.</p>
                 <button class="btn">Shop Now</button>
             </div>
@@ -25,18 +25,18 @@
         <section>
             <div class="featured-flowers-container">
                 <h1 class="feature-flower">Our Featured Flowers</h1>
-             <p> It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+             <p> It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
             </div>  
         </section>
 
         <section>
             <div class="three-flower-container">
                 <div class="">
-                    <img class="flower3a" src="imges/pngwing 10.png" alt="">
+                    <img class="flower3a" src="imges/rojoni.png" alt="Flower Shop">
                 </div>
-                <div class=""><img class="flower3b" src="imges/Rectangle 4.png" alt="">
+                <div class=""><img class="flower3b" src="imges/pngwing.png" alt="Flower Shop">
                 </div>
-                <div class=""><img class="flower3c" src="imges/pngwing 7.png" alt="">
+                <div class=""><img class="flower3c" src="imges/pngwing 7.png" alt="Flower Shop">
                 </div>
             </div>
         </section>
