footer and last section edited

--- a/index.html
+++ b/index.html
@@ -77,20 +77,28 @@
                 <div class="photo-gallary"><img class="photo" src="imges/Rectangler.png" alt=""></div>
             </div>
         </section>
-        
+
         <div class="latest-deal-container">
             <div class="typing-info">
                 <h1>Get The Latest Deals</h1>
                 <p>$30 coupon for first shopping</p>
+                <input type="email" placeholder="Enter Your email here" cols="30" rows="20">
             </div>
             <div class="submit-info">
                 <button class="btn">Subscribe</button>
             </div>
         </div>
-
     </main>
 
-    <footer> </footer>
+    <footer> 
+        <div class="ftr">
+            <h1> <span class="flower-spn">Flower</span> <span class="Shop-spn">Shop</span> </h1>
+                <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+
+        &copy<p>2020-2023, FlowerShop.com. All rights reserved. </p>
+        </div>
+        
+    </footer>
 
 
 
