--- a/index.html
+++ b/index.html
@@ -49,6 +49,31 @@
             </div>
         </section>
 
+
+        <section>
+            <div class="flower-advertistment">
+                
+                <div class="delivery">
+                    <img class="add-pic" src="imges/Group 57.png" alt="Flower Shop">
+                    <p></p>
+                </div>
+
+                <div class="local">
+                    <img class="add-pic" src="imges/Group 58.png" alt="Flower Shop">
+                    <p></p>    
+                </div>
+
+                <div class="free-support">
+                    <img class="add-pic" src="imges/Group 59.png" alt="Flower Shop">
+                    <p></p>
+                </div>
+
+            </div>
+
+        </section>
+
+
+
         <section>
             <div class="hot-deal-container">
                 <div class="hot-deal">
@@ -92,10 +117,10 @@
 
     <footer> 
         <div class="ftr">
-            <h1> <span class="flower-spn">Flower</span> <span class="Shop-spn">Shop</span> </h1>
+            <h1 class="footer-title"> <span class="flower-spn">Flower</span> <span class="Shop-spn">Shop</span> </h1> <br>
                 <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
 
-        &copy<p>2020-2023, FlowerShop.com. All rights reserved. </p>
+        &copy;<p>2020-2023, FlowerShop.com. All rights reserved. </p>
         </div>
         
     </footer>
