deal container updated

--- a/index.html
+++ b/index.html
@@ -55,17 +55,17 @@
                 
                 <div class="delivery">
                     <img class="add-pic" src="imges/Group 57.png" alt="Flower Shop">
-                    <p></p>
+                    <p>Same Day Delivery. Click & Collect.</p>
                 </div>
 
                 <div class="local">
                     <img class="add-pic" src="imges/Group 58.png" alt="Flower Shop">
-                    <p></p>    
+                    <p>Fresh Flowers. Local Growers.</p>    
                 </div>
 
                 <div class="free-support">
                     <img class="add-pic" src="imges/Group 59.png" alt="Flower Shop">
-                    <p></p>
+                    <p>24/7 Free Support.</p>
                 </div>
 
             </div>
@@ -106,7 +106,7 @@
         <div class="latest-deal-container">
             <div class="typing-info">
                 <h1>Get The Latest Deals</h1>
-                <p>$30 coupon for first shopping</p>
+                <p class="latest-deal-info">$30 coupon for first shopping</p>
                 <input type="email" placeholder="Enter Your email here" cols="30" rows="20">
             </div>
             <div class="submit-info">
