last lection updated

--- a/index.html
+++ b/index.html
@@ -104,12 +104,11 @@
         </section>
 
         <div class="latest-deal-container">
-            <div class="typing-info">
-                <h1>Get The Latest Deals</h1>
-                <p class="latest-deal-info">$30 coupon for first shopping</p>
-                <input type="email" placeholder="Enter Your email here" cols="30" rows="20">
-            </div>
+            <h1 class="deal-item">Get The Latest Deals</h1>
+            <p class="latest-deal-info">$30 coupon for first shopping</p>
+
             <div class="submit-info">
+                <input class="input type"="email" placeholder="Enter your email here">
                 <button class="btn">Subscribe</button>
             </div>
         </div>
