--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@
 
 
         <section>
-            <div class="flower-advertistment">
-                
+            <div class="flower-advertistment">  
                 <div class="delivery">
                     <img class="add-pic" src="imges/Group 57.png" alt="Flower Shop">
                     <p>Same Day Delivery. Click & Collect.</p>
@@ -67,12 +66,8 @@
                     <img class="add-pic" src="imges/Group 59.png" alt="Flower Shop">
                     <p>24/7 Free Support.</p>
                 </div>
-
             </div>
-
         </section>
-
-
 
         <section>
             <div class="hot-deal-container">
@@ -88,18 +83,20 @@
                 </div>
             </div>
         </section>
+
         <section>
             <div class="instagram-container">
                 <h1 class="instagram-title">Instagram</h1>
                 <p class="instagram-description">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
             </div>
         </section>
+
         <section>
             <div class="photo-gallery-container">
-                <div class="photo-gallary"><img class="photo" src="imges/Flower.png" alt=""></div>
-                <div class="photo-gallary"><img class="photo" src="imges/Rectangle (3).png" alt=""></div>
-                <div class="photo-gallary"><img class="photo" src="imges/Rectangle.png" alt=""></div>
-                <div class="photo-gallary"><img class="photo" src="imges/Rectangler.png" alt=""></div>
+                <div class="photo-gallary"><img class="photo" src="imges/Flower.png" alt="flower shop"></div>
+                <div class="photo-gallary"><img class="photo" src="imges/Rectangle (3).png" alt="flower shop"></div>
+                <div class="photo-gallary"><img class="photo" src="imges/Rectangle.png" alt="flower shop"></div>
+                <div class="photo-gallary"><img class="photo" src="imges/Rectangler.png" alt="flower shop"></div>
             </div>
         </section>
 
@@ -119,7 +116,7 @@
             <h1 class="footer-title"> <span class="flower-spn">Flower</span> <span class="Shop-spn">Shop</span> </h1> <br>
                 <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
 
-        &copy;<p>2020-2023, FlowerShop.com. All rights reserved. </p>
+        <p>&copy;2020-2023, FlowerShop.com. All rights reserved. </p>
         </div>
         
     </footer>
