--- a/index.html
+++ b/index.html
@@ -105,8 +105,14 @@
             <p class="latest-deal-info">$30 coupon for first shopping</p>
 
             <div class="submit-info">
-                <input class="input type"="email" placeholder="Enter your email here">
+                <div class="email-item">
+                    <input type="email" placeholder="Enter your email here" id="fname" name="fname" size="50">
+                </div>
+                
+                <div class="btn-info">
                 <button class="btn">Subscribe</button>
+                </div>
+                
             </div>
         </div>
     </main>
