Last section updated

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
             <div class="submit-info">
                 <div class="email-item">
-                    <input type="email" placeholder="Enter your email here" id="fname" name="fname" size="50">
+                <textarea id="email" placeholder="Enter your email here...." name="email" rows="3" cols="50"></textarea>
                 </div>
                 
                 <div class="btn-info">
